# muninn

./: .gitignore  Cargo.toml  README.md  package.json
daemon/: Cargo.toml
daemon/src/: lyrics.rs  main.rs  mpris_manager.rs  sock.rs  utils.rs
gui/: package.json
gui/src/: App.tsx  types.ts  utils.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
shared/: Cargo.toml
shared/src/: database.rs  lib.rs  mpris_manager.rs
src/: App.css  App.tsx  main.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  lib.rs  mpris_manager.rs
src/ArtistsHistoryChart/: ArtistsHistoryChart.module.scss  ArtistsHistoryChart.tsx
src/ChartRangeFilter/: ChartRangeFilter.module.scss  ChartRangeFilter.tsx
src/Lyrics/: Lyrics.module.scss  Lyrics.tsx
src/Pie/: Pie.tsx
src/Playing/: Playing.module.scss  Playing.tsx
src/RoundedStepChart/: RoundedStepChart.module.scss  RoundedStepChart.tsx
src/SongsHistoryChart/: SongsHistoryChart.tsx
src/Stack/: Stack.module.scss  Stack.tsx
src/StatsAlbum/: StatsAlbum.module.scss  StatsAlbum.tsx
src/StatsAlbumRow/: StatsAlbumRow.module.scss  StatsAlbumRow.tsx
src/StatsArtist/: StatsArtist.module.scss  StatsArtist.tsx
src/StatsArtistRow/: StatsArtistRow.module.scss  StatsArtistRow.tsx
src/StatsArtist_NOTUSED/: StatsArtist.tsx
src/StatsChart/: StatsChart.module.scss  StatsChart.tsx
src/StatsChart copy/: StatsChart.module.scss  StatsChart.tsx
src/StatsGeneric/: StatsGeneric.module.scss  StatsGeneric.tsx
src/StatsSong/: StatsSong.module.scss  StatsSong.tsx
src/VisualTable/: VisualTable.tsx  (+1 more)
(+17 files in other folders)
