[package]
name = "muninn-daemon"
version = "0.0.1"
description = "A deamon that registers the music you are listening to"
authors = ["Vincenzo Minolfi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
# serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.41"