[package]
name = "muninn-daemon"
version = "0.0.1"
description = "A deamon that registers the music you are listening to"
authors = ["Vincenzo Minolfi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.138"
serde_json = "1"
chrono = "0.4.41"
reqwest = { version = "0.12", features = ["json", "blocking"] }
regex = "1.12"
anyhow = "1.0"
log = "0.4"
fern = "0.6"
ctrlc = "3.4"